--- a/p4-cottege.html
+++ b/p4-cottege.html
@@ -106,7 +106,7 @@
         <div class="nav">
             <t class="name">Neshal Agudo</t>
 
-            <a href="/page2.html"> Back to Projects</a>
+            <a href="page2.html"> Back to Projects</a>
             
         </div>
 
