--- a/p8-simplewebsite.html
+++ b/p8-simplewebsite.html
@@ -110,7 +110,7 @@
         <div class="nav">
             <t class="name">Neshal Agudo</t>
 
-            <a href="/page2.html"> Back to Projects</a>
+            <a href="page2.html"> Back to Projects</a>
            
            
         </div>
