--- a/project1.html
+++ b/project1.html
@@ -107,7 +107,7 @@
             <t class="name">Neshal Agudo</t>
 
             
-            <a href="/page2.html"> Back to Projects</a>
+            <a href="page2.html"> Back to Projects</a>
         
         </div>
 
