--- a/page2.html
+++ b/page2.html
@@ -113,26 +113,26 @@
                 <p class="n1">09</p>
                 <p class="title2">Enrollment<br> System<br></p>
                 <p class="title1">Simple Enrollment System</p>
-                <a href="Project-page/project1.html"><button class="b1">View  →</button></a>
+                <a href="project1.html"><button class="b1">View  →</button></a>
             </div>
 
             <div class="a2">
                 <p class="n1">10</p>
                 <p class="title2">Ordering App<br> Activity<br></p>
                 <p class="title1" >Ordering App using react native</p>
-                <a href="Project-page/project2.html"><button class="b1" >View  →</button></a>
+                <a href="project2.html"><button class="b1" >View  →</button></a>
             </div>
             <div class="a3">
                 <p class="n1">11</p>
                 <p class="title2">Simple<br> App Activity<br></p>
                 <p class="title1">Activity using react native</p>
-                <a href="Project-page/project3.html"><button class="b1">View  →</button></a>
+                <a href="project3.html"><button class="b1">View  →</button></a>
             </div>
             <div class="a4">
                 <p class="n1">12</p>
                 <p class="title2">Database<br> Activity<br></p>
                 <p class="title1">Ward management <br> &nbsp;</p>
-                <a href="Project-page/project4.html"><button class="b1" style="margin-top: 3%;">View  →</button></a>
+                <a href="project4.html"><button class="b1" style="margin-top: 3%;">View  →</button></a>
             </div>
         </div>
 
