--- a/certificates.html
+++ b/certificates.html
@@ -83,6 +83,13 @@
                                     <p class="card-description">TESDA CSS</p>
                                 </div>
                             </div>
+                             <div class="card-container">
+                                <img class="card-image" src="certificates/y10.png" alt="Sample Image">
+                                <div class="card-content">
+            
+                                    <p class="card-description">Maintaining Computer System and Networks</p>
+                                </div>
+                            </div>
                             <div class="card-container">
                                 <img class="card-image" src="certificates/y5.png" alt="Sample Image">
                                 <div class="card-content">
