--- a/page2.html
+++ b/page2.html
@@ -125,20 +125,22 @@
                 <a href="https://drive.google.com/drive/folders/1SzTG2c5FmOQv_GlULNRLAZBtO6tPx7K1?usp=drive_link"><button class="b2" >System Files</button></a>
             </div>
 
-            <div class="a2">
+            <div class="a3">
                 <p class="n1">10</p>
+                <p class="title2">Online<br> Printing System<br></p>
+                <p class="title1">System Project</p>
+                <a href="printing.html"><button class="b1">Output</button></a>
+                <a href="#"><button class="b2" disabled>System Files</button></a>
+            </div>
+
+            <div class="a2">
+                <p class="n1">11</p>
                 <p class="title2">Ordering App<br> Activity<br></p>
                 <p class="title1" >Ordering App using react native</p>
                 <a href="project2.html"><button class="b1" >Output</button></a>
                 <a href="#"><button class="b2" disabled>System Files</button></a>
             </div>
-            <div class="a3">
-                <p class="n1">11</p>
-                <p class="title2">Simple<br> App Activity<br></p>
-                <p class="title1">Activity using react native</p>
-                <a href="project3.html"><button class="b1">Output</button></a>
-                <a href="#"><button class="b2" disabled>System Files</button></a>
-            </div>
+         
             <div class="a4">
                 <p class="n1">12</p>
                 <p class="title2">Database<br> Activity<br></p>
