--- a/page2.html
+++ b/page2.html
@@ -128,9 +128,9 @@
             <div class="a3">
                 <p class="n1">10</p>
                 <p class="title2">Online<br> Printing System<br></p>
-                <p class="title1">System Project</p>
+                <p class="title1">Integrated System Project</p>
                 <a href="printing.html"><button class="b1">Output</button></a>
-                <a href="#"><button class="b2" disabled>System Files</button></a>
+                <a href="https://drive.google.com/drive/folders/1seKjGxAwXFEZiR93RdFwv3ZnAfY_XZym?usp=drive_link"><button class="b2" disabled>System Files</button></a>
             </div>
 
             <div class="a2">
