--- a/page2.html
+++ b/page2.html
@@ -130,7 +130,7 @@
                 <p class="title2">Online<br> Printing System<br></p>
                 <p class="title1">Integrated System Project</p>
                 <a href="printing.html"><button class="b1">Output</button></a>
-                <a href="https://drive.google.com/drive/folders/1seKjGxAwXFEZiR93RdFwv3ZnAfY_XZym?usp=drive_link"><button class="b2">System Files</button></a>
+                <a href="https://drive.google.com/drive/folders/1ezLwusa3v6OPMy2O1Ymcj_Zx9QXT7zQE?usp=sharing"><button class="b2">System Files</button></a>
             </div>
 
             <div class="a2">
