--- a/printing.html
+++ b/printing.html
@@ -120,6 +120,74 @@
         <p>Landing Page of the system</p>
     </figcaption>
 </div>
+<div class="image-container">
+    <img src="q1.png" alt="Image Description">
+    <figcaption class="image-description">
+        <p>About</p>
+    </figcaption>
+</div>
+<div class="image-container">
+    <img src="q2.png" alt="Image Description">
+    <figcaption class="image-description">
+        <p>Pricelist</p>
+    </figcaption>
+</div>
+<div class="image-container">
+    <img src="q3.png" alt="Image Description">
+    <figcaption class="image-description">
+        <p>Contact</p>
+    </figcaption>
+</div>
+<div class="image-container">
+    <img src="q4.png" alt="Image Description">
+    <figcaption class="image-description">
+        <p>Customer Loggin</p>
+    </figcaption>
+</div>
+<div class="image-container">
+    <img src="q5.png" alt="Image Description">
+    <figcaption class="image-description">
+        <p>Customer Register</p>
+    </figcaption>
+</div>
+<div class="image-container">
+    <img src="q6.png" alt="Image Description">
+    <figcaption class="image-description">
+        <p>Printing Form</p>
+    </figcaption>
+</div>
+<div class="image-container">
+    <img src="q7.png" alt="Image Description">
+    <figcaption class="image-description">
+        <p>Admin Login</p>
+    </figcaption>
+</div>
+<div class="image-container">
+    <img src="q8.png" alt="Image Description">
+    <figcaption class="image-description">
+        <p>Admin Dashboard</p>
+    </figcaption>
+</div>
+<div class="image-container">
+    <img src="q9.png" alt="Image Description">
+    <figcaption class="image-description">
+        <p>Admin History</p>
+    </figcaption>
+</div>
+
+<div class="image-container">
+    <img src="q11.png" alt="Image Description">
+    <figcaption class="image-description">
+        <p>Admin data dashboard</p>
+    </figcaption>
+</div>
+<div class="image-container">
+    <img src="q13.png" alt="Image Description">
+    <figcaption class="image-description">
+        <p>Admin data dashboard</p>
+    </figcaption>
+</div>
+
 
 
 
